--- a/index.html
+++ b/index.html
@@ -62,24 +62,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Megan</h2>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <h2 class="section-heading">Megan Fox</h2>
+                    <a href="#portfolio" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Fox</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        
-    </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
