vyrovnanie zobrazovania obrazkov v portfoliu

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/0023ae606f170c8837d94c.jpg" class="portfolio-box">
                         <img src="img/megan/0023ae606f170c8837d94c.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -89,7 +89,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/54d58d9e190fb_-_esq-megan-fox-cover-0213-lg.jpg" class="portfolio-box">
                         <img src="img/megan/54d58d9e190fb_-_esq-megan-fox-cover-0213-lg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -104,7 +104,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/29502AD700000578-3108694-image-m-74_1433312881964.jpg" class="portfolio-box">
                         <img src="img/megan/29502AD700000578-3108694-image-m-74_1433312881964.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -119,7 +119,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/dfccd997f629e5a468f55a1c2d436abb.jpg" class="portfolio-box">
                         <img src="img/megan/dfccd997f629e5a468f55a1c2d436abb.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -134,7 +134,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/megan-fox-sexy-photos-7.jpg" class="portfolio-box">
                         <img src="img/megan/megan-fox-sexy-photos-7.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -149,7 +149,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 portfolio-item">
                     <a href="img/megan/megan-fox-getty6.jpg" class="portfolio-box">
                         <img src="img/megan/megan-fox-getty6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
